show search status

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,7 @@ div#sample
   h2 Try
   input(name="word", size=50, value="山", type="text")
   input(name="search", value="search", type="button")
+  div#status
   ul.result
 script(src="/javascripts/jquery.js", type="application/javascript")
 script(src="/javascripts/index.js", type="application/javascript")
